<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRoute">

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtName"
        android:hint="Walk Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="@+id/textName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textStartPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textStartPoint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintLeft_toLeftOf="@+id/inputName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/inputStartPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtStartPoint"
        android:hint="Starting Point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toRightOf="@+id/textStartPoint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textFeature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textFeature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textName"
        app:layout_constraintVertical_bias="0.04" />

    <RadioGroup
        android:id="@+id/groupLoop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFeature"
        app:layout_constraintVertical_bias="0.04">

        <RadioButton
            android:id="@+id/loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textLoop"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
        <RadioButton
            android:id="@+id/outnback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textOut"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/groupFlat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="@+id/textStartPoint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFeature"
        app:layout_constraintVertical_bias="0.04">

        <RadioButton
            android:id="@+id/flat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textFlat"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
        <RadioButton
            android:id="@+id/hilly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textHilly"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/groupStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupLoop"
        app:layout_constraintVertical_bias="0.04">

        <RadioButton
            android:id="@+id/street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textStreet"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
        <RadioButton
            android:id="@+id/trail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTrail"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/groupSurface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="@+id/textStartPoint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupFlat"
        app:layout_constraintVertical_bias="0.04">

        <RadioButton
            android:id="@+id/evensurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSurface1"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
        <RadioButton
            android:id="@+id/unevensurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSurface2"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/groupDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupStreet"
        app:layout_constraintVertical_bias="0.04">

        <RadioButton
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textEasy"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
        <RadioButton
            android:id="@+id/moderate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textModerate"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
        <RadioButton
            android:id="@+id/difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDifficult"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="512dp" />
    </RadioGroup>


    <TextView
        android:id="@+id/textNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textNote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupDifficulty"
        app:layout_constraintVertical_bias="0.057" />

    <EditText
        android:id="@+id/inputNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textNote"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textNote"
        app:layout_constraintVertical_bias="0.093" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="140sp"
        android:layout_height="56sp"
        android:layout_marginBottom="20sp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="@+id/textName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputNote"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/save"
        android:layout_width="140sp"
        android:layout_height="56sp"
        android:layout_marginBottom="20sp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="@+id/textStartPoint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputNote"
        app:layout_constraintVertical_bias="0.04" />




</androidx.constraintlayout.widget.ConstraintLayout>